--- a/MiniInventory.UI/Pages/Shared/_Layout.cshtml
+++ b/MiniInventory.UI/Pages/Shared/_Layout.cshtml
@@ -54,8 +54,8 @@
                                 Orders
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-page="/Orders/Index">All Orders</a></li>
-                                <li><a class="dropdown-item" asp-page="/Orders/Create">Create Order</a></li>
+                                <li><a class="dropdown-item" asp-page="/Orders/Index">All Sales Orders</a></li>
+                                <li><a class="dropdown-item" asp-page="/Orders/Create">Create Sales Order</a></li>
                             </ul>
                         </li>
 
@@ -66,7 +66,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-page="/Stock/Index">All Stock Transaction</a></li>
-                                <li><a class="dropdown-item" asp-page="/Stock/ManageStock">Stock In/Out</a></li>
+                                <li><a class="dropdown-item" asp-page="/Stock/ManageStock">Product Recieve/Transfer</a></li>
                             </ul>
                         </li>
 
